# weggli

./: .gitignore  Cargo.toml  Manifest.in  README.md  binja_weggli.py  build.rs  hacking.md  setup.py
.github/workflows/: python.yml  releases.yaml  test.yml
benches/: examples.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_query.rs
plugins/binaryninja/: README.md  binja_weggli.py  plugins.json  requirements.txt
plugins/idapro/: ida_weggli.py
src/: binja.rs  builder.rs  capture.rs  cli.rs  lib.rs  main.rs  python.rs  query.rs  repl.rs  result.rs  util.rs
tests/: __init__.py  cli.rs  query.rs
