[package]
name = "weggli"
version = "0.2.1"
authors = ["fwilhelm"]
edition = "2018"
license = "Apache-2.0"
description = "weggli is a fast and robust semantic search tool for C and C++ codebases. It is designed to help security researchers identify interesting functionality in large codebases."


[features]
python = ["pyo3"]

[lib]
crate-type = ["rlib", "dylib"]

[[bin]]
name = "weggli"

[dependencies]
tree-sitter = "0.19.2"
log = "0.4.11"
clap = "2.33.3"
walkdir = "2.3.1"
rayon = "1.5.0"
colored = "2.0.0"
simplelog = "0.10.0"
regex = "1"

[dependencies.pyo3]
version = "0.13.0"
features = ["extension-module"]
optional = true

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.17.0"

[build-dependencies]
cc = "1.0.65"

[dev-dependencies]
criterion = {version = "0.3",features = ["html_reports"]}
assert_cmd = "2.0.0"
predicates = "1"

[[bench]]
name = "examples"
harness = false
