[package]
name = "weggli"
version = "0.2.4"
authors = ["fwilhelm"]
edition = "2018"
license = "Apache-2.0"
description = "weggli is a fast and robust semantic search tool for C and C++ codebases. It is designed to help security researchers identify interesting functionality in large codebases."


[features]
python = ["pyo3"]

[lib]
crate-type = ["rlib", "dylib"]

[[bin]]
name = "weggli"

[dependencies]
tree-sitter = "0.20.9"
log = "0.4.17"
clap = "^3.0.13"
walkdir = "2.3.2"
rayon = "1.5.3"
colored = "2.0.0"
simplelog = "0.12.0"
regex = "1"
rustc-hash = "1.1.0"

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]
optional = true

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.25.0"

[build-dependencies]
cc = "1.0.73"

[dev-dependencies]
criterion = {version = "0.3",features = ["html_reports"]}
assert_cmd = "2.0.0"
predicates = "1"

[[bench]]
name = "examples"
harness = false
